--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
