--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^5.0.0",
+    "sass": "^1.49.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +30,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.3.0"
+    "prettier": "^2.5.1"
   }
 }
